<resources>
    <string name="app_name">ShoppingList</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_open_screen">OpenScreenActivity</string>
    <string name="text_opening_title">The\n Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_shopping_list">Shopping List</string>
    <string name="button_add_item">Add new Item</string>
    <string name="title_categories">Choose Category</string>
    <string name="button_single_item_edit">Edit</string>
    <string name="button_categories">Categories</string>
    <string name="button_shopping_list">Shopping List</string>
    <string name="title_activity_item_edit">Item Properties</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="text_item_name">Item Name:</string>
    <string name="text_item_category">Category</string>
    <string name="delete_item">Delete Item</string>
    <string name="text_add_item_to_list">Add Item to List?</string>
    <string name="text_amount">Amount :</string>
    <string name="button_save_changes">save changes</string>
    <string name="button_cancel_changes">cancel changes</string>
    <string name="button_change_image">Change image</string>
    <string name="button_take_pictre">take pictre</string>
    <string name="button_clean_cart">clean cart</string>
    <string name="button_show_cart">show cart</string>
</resources>
